# sofa-registry-rs

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  README.md  config.example.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: impl_client.rs  lib.rs
crates/client/src/api/: mod.rs  observer.rs  publisher.rs  registration.rs  registry_client.rs  subscriber.rs
crates/client/src/auth/: auth_manager.rs  mod.rs
crates/client/src/config/: client_config.rs  mod.rs
crates/client/src/remoting/: client_connection.rs  mod.rs
crates/client/src/task/: mod.rs  reconnect.rs
crates/client/tests/: auth_tests.rs  config_tests.rs  registration_tests.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  util.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: data_service.proto  meta_service.proto  registry_model.proto  session_service.proto
crates/core/src/: constants.rs  error.rs  lib.rs
crates/core/src/model/: base_register.rs  connect_id.rs  data_box.rs  data_info.rs  datum.rs  event_type.rs  mod.rs  node.rs  process_id.rs  publish_type.rs  publisher.rs  publisher_register.rs  received_data.rs  register_response.rs  register_version.rs  scope.rs  server_data_box.rs  subscriber.rs  subscriber_register.rs
crates/core/src/slot/: mod.rs  slot_access.rs  slot_config.rs  slot_func.rs  slot_table.rs  types.rs
crates/core/tests/: error_tests.rs  model_tests.rs  slot_tests.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: harness.rs  lib.rs  reporter.rs
crates/integration-tests/tests/: chaos_consistency_test.rs  chaos_load_test.rs  chaos_server_failure_test.rs  chaos_slot_test.rs  e2e_admin_api_test.rs  e2e_lifecycle_test.rs  e2e_multiclient_test.rs  e2e_pubsub_test.rs  e2e_push_test.rs  server_lifecycle_test.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  server.rs
crates/mcp/src/tools/: get_cluster_health.rs  get_service_info.rs  get_slot_table.rs  list_services.rs  mod.rs  search_services.rs
crates/mcp/src/transport/: stdio.rs
crates/mcp/tests/: server_tests.rs  tool_tests.rs
crates/remoting/: Cargo.toml
crates/remoting/src/: lib.rs
crates/remoting/src/grpc/: client.rs  server.rs
crates/remoting/src/http/: server.rs
crates/server-data/: Cargo.toml
crates/server-data/src/: config.rs  lib.rs  server.rs
crates/server-data/src/cache/: local_datum_storage.rs  mod.rs
crates/server-data/src/change/: data_change_center.rs  mod.rs
crates/server-data/src/http/: handlers.rs  routes.rs
crates/server-data/src/lease/: mod.rs  session_lease_manager.rs
crates/server-data/src/remoting/: data_grpc_service.rs  mod.rs
crates/server-data/src/replication/: mod.rs  slot_diff_syncer.rs
crates/server-data/src/slot/: mod.rs  slot_manager.rs
crates/server-data/tests/: change_event_tests.rs  session_lease_tests.rs  slot_manager_tests.rs
crates/server-meta/: Cargo.toml
crates/server-meta/src/: lib.rs  server.rs
crates/server-meta/src/config/: mod.rs
crates/server-meta/src/grpc/: meta_grpc_service.rs  mod.rs
crates/server-meta/src/http/: handlers.rs  routes.rs
crates/server-meta/src/leader/: elector.rs  mod.rs
crates/server-meta/src/lease/: data_server_manager.rs  lease_manager.rs  mod.rs  session_server_manager.rs
crates/server-meta/src/slot/: mod.rs  slot_allocator.rs  slot_manager.rs
crates/server-meta/tests/: election_tests.rs  lease_tests.rs  slot_tests.rs
crates/server-session/: Cargo.toml
crates/server-session/src/: config.rs  lib.rs  server.rs
crates/server-session/src/cache/: mod.rs  session_cache.rs
crates/server-session/src/connection/: connection_service.rs  mod.rs
crates/server-session/src/converter/: mod.rs
crates/server-session/src/http/: handlers.rs  routes.rs
crates/server-session/src/push/: mod.rs  push_service.rs  stream_registry.rs
crates/server-session/src/registry/: mod.rs  publisher_registry.rs  subscriber_registry.rs
crates/server-session/src/remoting/: mod.rs  session_grpc_service.rs
crates/server-session/src/slot/: mod.rs  session_slot_manager.rs
crates/server-session/src/write/: mod.rs  write_data_acceptor.rs
crates/server-session/tests/: publisher_registry_tests.rs  push_service_tests.rs  subscriber_registry_tests.rs
crates/server-shared/: Cargo.toml
crates/server-shared/src/: lib.rs  meta_client.rs  metrics.rs
crates/server-shared/src/config/: common_config.rs  mod.rs
crates/server-shared/src/env/: mod.rs  server_env.rs
crates/server-shared/src/resource/: health.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/src/jdbc/: app_revision_repo.rs  client_manager_repo.rs  distribute_lock_repo.rs  interface_apps_repo.rs  mod.rs  pool.rs  provide_data_repo.rs
crates/store/src/memory/: datum_storage.rs  mod.rs
crates/store/src/migrations/: 001_initial.sql
crates/store/src/traits/: app_revision.rs  client_manager.rs  datum_storage.rs  distribute_lock.rs  interface_apps.rs  leader_elector.rs  meta_service.rs  mod.rs  provide_data.rs
crates/store/tests/: jdbc_tests.rs  memory_storage_tests.rs
test-results/: qa-loop-report.md
