[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/common",
    "crates/client",
    "crates/store",
    "crates/remoting",
    "crates/server-shared",
    "crates/server-meta",
    "crates/server-data",
    "crates/server-session",
    "crates/mcp",
    "crates/bin",
    "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sofastack/sofa-registry-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tonic-build = "0.12"

# HTTP
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
crc32c = "0.6"
bytes = "1"
rand = "0.8"

# Crypto
hmac = "0.12"
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
config = "0.14"

# Metrics / Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Testing
mockall = "0.13"

# Internal crates
sofa-registry-core = { path = "crates/core" }
sofa-registry-common = { path = "crates/common" }
sofa-registry-store = { path = "crates/store" }
sofa-registry-remoting = { path = "crates/remoting" }
sofa-registry-server-shared = { path = "crates/server-shared" }
sofa-registry-server-meta = { path = "crates/server-meta" }
sofa-registry-server-data = { path = "crates/server-data" }
sofa-registry-server-session = { path = "crates/server-session" }
sofa-registry-client = { path = "crates/client" }
sofa-registry-mcp = { path = "crates/mcp" }

[profile.release]
lto = true
codegen-units = 1
strip = true
