[package]
name = "sofa-registry-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sofa-registry-core.workspace = true
sofa-registry-remoting.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
