[package]
name = "sofa-registry-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
crc32c.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true }
