[package]
name = "sofa-registry-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sofa-registry-core.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
clap.workspace = true
futures.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
