[package]
name = "sofa-registry-remoting"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sofa-registry-core.workspace = true
tonic.workspace = true
prost.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
