[package]
name = "sofa-registry-server-meta"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sofa-registry-core.workspace = true
sofa-registry-store.workspace = true
sofa-registry-remoting.workspace = true
sofa-registry-server-shared.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
chrono.workspace = true
rand.workspace = true
sqlx.workspace = true
tokio-util.workspace = true
metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
