[package]
name = "sofa-registry-server-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sofa-registry-core.workspace = true
sofa-registry-store.workspace = true
sofa-registry-remoting.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
chrono.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
