[package]
name = "sofa-registry-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sofa-registry-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
crc32c.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
